2003-09-28  Moritz Schulte  <mo@g10code.com>

	* ath.c: Change License to LGPL.
	* ath-pthread-compat.c: Likewise.
	* ath-pthread.c: Likewise.
	* ath-pth-compat.c: Likewise.
	* ath-pth.c: Likewise.
	* ath.h: Likewise.
	* ath-compat.c: Likewise.

	* secmem.c (_gcry_secmem_realloc): Do not forget to release secmem
	lock.  Thanks to low halo for triggering this bug.

2003-09-04  Werner Koch  <wk@gnupg.org>

	* gcrypt.h (_GCRY_ERR_SOURCE_DEFAULT): Removed cruft.
	(gcry_prime_check_func_t): Renamed arg for clarity.

2003-09-02  Moritz Schulte  <mo@g10code.com>

	* gcrypt.h (GCRY_PRIME_FLAG_SPECIAL_FACTOR): New symbol.

2003-09-01  Moritz Schulte  <mo@g10code.com>

	* gcrypt.h (gcry_random_level_t): New type.
	(gcry_prime_check_func_t): Likewise.
	(GCRY_PRIME_FLAG_SECRET): New symbol.
	(gcry_prime_generate, gcry_prime_check): Declare functions.

2003-08-28  Werner Koch  <wk@gnupg.org>

	* Makefile.am (libgcrypt_pth_la_LDFLAGS): Removed PTH_CFLAGS cruft.

2003-08-27  Moritz Schulte  <mo@g10code.com>

	* global.c (gcry_control): Remove call to ath_deinit.

	* Makefile.am (libgcrypt_real_la_DEPENDENCIES): Fixed.
	(libgcrypt_real_la_LIBADD): Fixed.
	Removed unecessary variables.

	* libgcrypt-config.in: Adjusted script for new thread handling.

	* Makefile.am: New version, based on GPGMEs Makefile.am.

	* ath.c, ath-compat.c, ath.h, ath-pth.c, ath-pth-compat.c,
	ath-pthread.c, ath-pthread-compat.c: New files, merged from GPGME.
	* ath.c, ath.h, ath-pthread.c, ath-pth.c: Removed files.

2003-08-08  Moritz Schulte  <moritz@g10code.com>

	* global.c (gcry_realloc): Remove FIXME about `clearing out
	realloced memory', since _gcry_secmem_realloc takes care of
	overwriting old memory.

2003-08-07  Werner Koch  <wk@gnupg.org>

	* module.c (_gcry_module_release): Don't act if module is NULL.

2003-07-30  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.h (enum gcry_ac_id): Added: GCRY_AC_ELG_E.
	Reverted change: use gcry_md_flags enumeration list instead of
	defines.
