@@ -1,3 +1,7 @@
+2003-10-07  Werner Koch  <wk@gnupg.org>
+
+	* tsexp.c (check_sscan): New.
+
 2003-09-04  Werner Koch  <wk@gnupg.org>
 
 	* pubkey.c (check_keys_crypt): Fix for compatibility mode.
