@@ -1,3 +1,7 @@
+2003-10-07  Werner Koch  <wk@gnupg.org>
+
+	* sexp.c (sexp_sscan): Check that parenthesis are matching.
+
 2003-09-28  Moritz Schulte  <mo@g10code.com>
 
 	* ath.c: Change License to LGPL.
